APU downgraded to OpenGL 3.0 since UBO size change in radeonsi
System information
System:
Host: toastix Kernel: 5.18.1-4-cachyos-cfs arch: x86_64 bits: 64
compiler: gcc v: 12.1.0 Desktop: Xfce v: 4.16.0 tk: Gtk v: 3.24.29 wm: xfwm
dm: LightDM Distro: Artix Linux base: Arch Linux
CPU:
Info: quad core model: AMD A10-7800 Radeon R7 12 Compute Cores 4C+8G
bits: 64 type: MT MCP arch: Steamroller rev: 1 cache: L1: 256 KiB L2: 4 MiB
Speed (MHz): avg: 1397 min/max: 1400/3500 boost: enabled cores: 1: 1397
2: 1397 3: 1397 4: 1397 bogomips: 27977
Flags: avx ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
Graphics:
Device-1: AMD Kaveri [Radeon R7 Graphics] vendor: Gigabyte driver: amdgpu
v: kernel ports: active: HDMI-A-1 empty: DVI-D-1 bus-ID: 00:01.0
chip-ID: 1002:130f
Device-2: AMD Oland XT [Radeon HD 8670 / R5 340X OEM R7 250/350/350X OEM]
vendor: Dell driver: amdgpu v: kernel pcie: speed: 8 GT/s lanes: 8 ports:
active: none empty: DP-1,DVI-D-2 bus-ID: 01:00.0 chip-ID: 1002:6610
Display: x11 server: X.Org v: 21.1.3 with: Xwayland v: 21.1.99
compositor: xfwm v: 4.16.1 driver: X: loaded: amdgpu unloaded: nouveau
gpu: amdgpu display-ID: :0.0 screens: 1
Screen-1: 0 s-res: 1920x1080 s-dpi: 96
Monitor-1: HDMI-A-1 mapped: HDMI-A-0 model: Dell SE2417HG res: 1920x1080
dpi: 94 diag: 598mm (23.5")
OpenGL:
renderer: KAVERI (kaveri LLVM 13.0.1 DRM 3.46 5.18.1-4-cachyos-cfs)
v: 3.0 Mesa 22.2.0-devel (git-ee1a0a0772) direct render: Yes
Describe the issue
Since updating to commit 5c17a042, (I am user of TkG's mesa-git so packages are built in intervals) my Kaveri APU no longer reports OpenGL 4.6 support but OpenGL 3.0 instead.
I am assuming that MR !16901 (merged) broke it as Chromium shows
WebGL: Hardware accelerated but at reduced performance
WebGL2: Hardware accelerated but at reduced performance
with the following message:
[19703:19703:0609/180637.524595:ERROR:context_group.cc(256)] : ContextResult::kFatalFailure: maximum uniform buffer bindings is too small (0, should be 24).
My dedicated GPU does not suffer from this issue as it reports OpenGL 4.6.
Regression
Commit ffb0c97c and earlier make my iGPU report OpenGL 4.6 support.